--- a/24-figure4.Rmd
+++ b/24-figure4.Rmd
@@ -14,19 +14,23 @@ dir.create(fig4_figs_path, showWarnings = FALSE)
 ggsave(plot=V ,height=6,width=6,dpi=200, 
        filename=file.path(fig4_figs_path, "fig4_venn_plot_7.pdf"), 
        useDingbats=FALSE)
+
+
 (Vaa = venn::venn(aa_per_pt[paste("Patient", LETTERS[1:7])], ilab = TRUE, zcolor = "style", opacity = .2, ggplot = TRUE))
-
-
-
 ggsave(plot=Vaa ,height=6,width=6,
        filename=file.path(fig4_figs_path,"fig4_venn_plot_7_aa.pdf"), 
+       useDingbats=FALSE)
+
+(Vbioid = venn::venn(bioid_per_pt[paste("Patient", LETTERS[1:7])], ilab = TRUE, zcolor = "style", opacity = .2, ggplot = TRUE))
+ggsave(plot=Vbioid ,height=6,width=6,
+       filename=file.path(fig4_figs_path,"fig4_venn_plot_7_bioid.pdf"), 
        useDingbats=FALSE)
 
 
 
 #write.csv(paired_patients, "overlapping_clones_com.csv", row.names = F)
 
-
+Vaa + Vbioid
 ```
 
 
