--- a/38-figureS4P-tableS5-UC-TCRs.Rmd
+++ b/38-figureS4P-tableS5-UC-TCRs.Rmd
@@ -92,7 +92,7 @@ fig1R <- ggplot(msk_uc_corrs%>%
 ggsave(plot=fig1R ,height=4,width=6, filename=file.path(figures_path, "Revision_fig1R.pdf"))
 
 #plot with the data from Teichmann et al . as well (JSD calculated separately)
-
+msk_uc_corrs2 <- msk_uc_corrs
 msk_uc_corrs2 = read.csv("JSD_public_comparisons.csv")
 
 theselimits = sort(unique(msk_uc_corrs2$xgroup))
@@ -180,7 +180,28 @@ by_pt_cross_cohort_common_bio_identities <- common_bio_identities %>% group_by(b
 # filter to retain bioidentities found in both cohorts, ignoring singletons
 by_pt_cross_cohort_common_bio_identities_gt1 <- common_bio_identities %>% filter(templates > 1) %>% group_by(bio_identity) %>% filter(n_distinct(cohort) > 1)
 
+uc_bioidentities <- UC_tcr_raw %>% 
+    filter(frame_type == "In") %>% 
+    filter(tissue !="blood", disease!="control") %>% 
+    select(bio_identity) %>% distinct()
+
+msk_overlapping_bioidentities <- tcr_raw %>% filter(frame_type == "In") %>% 
+    filter(sample_name %in% (tcr_sample_metadata %>% filter(org == "Human", tissue != "graft_blood") %>% pull(sample_name))) %>% 
+  filter(bio_identity %in% uc_bioidentities$bio_identity) %>% 
+  group_by( v_gene, j_gene, cdr3_amino_acid, bio_identity) %>%
+  mutate(n_samples = n()) %>% ungroup() %>%
+  group_by(sample_name,gvhd,  v_gene, j_gene, cdr3_amino_acid, bio_identity, n_samples) %>%
+  summarize(relab=round(100*sum(productive_frequency), 2)) %>%
+  ungroup()  
+    
+table_sx <- msk_overlapping_bioidentities %>% filter(gvhd=="GvHD") %>% select(sample_name, v_gene, j_gene, cdr3_amino_acid, n_samples, relab) %>%   pivot_wider(id_cols = c(v_gene,  cdr3_amino_acid, j_gene, n_samples), names_from=sample_name, values_from=relab, values_fill = 0)
  
+write.csv(table_sx, "tables/st7-uc-clones-in-gvhd-samples.csv", row.names = FALSE)
+
+
+
+
+
 
 # library(ggalluvial)
 
@@ -287,11 +308,19 @@ ggplot(by_msk_pt %>% left_join(tcr_sample_metadata, by=c("samp"="sample_name")),
 
 ```
 
-## 
+## Comparing to known clonotypes
 
-make a table of UC clones (x) by sample_name, acc count of n tissues detected.  Disregard original rank
 
 ```{r}
+download.file("https://df6sxcketz7bb.cloudfront.net/manuscripts/149000/149080/jci.insight.149080.sdt8.xlsx", "data/jci.insight.149080.sdt8.xlsx")
+clonotypes <- readxl::read_xlsx("data/jci.insight.149080.sdt8.xlsx", skip = 1)
+
+
+ggplot(left_join(msk_overlapping_bioidentities, clonotypes, by=c("cdr3_amino_acid"="CDR3.aa")), 
+#       aes(x=relab, y= paste0(Pathology, "\n", Antigen.protein), size=n_samples, fill=Category )) +
+       aes(x=relab, y=str_wrap(Pathology), size=n_samples, fill=Category )) +
+  geom_point(shape=21) + 
+  facet_grid(Category  ~ gvhd, space="free", scales = "free_y")
 
 
 ```
